--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=mysql+pymysql://root:@localhost/practica
+DATABASE_URL=mysql+pymysql://admin:xXFpharad0x?Xx@prueba.cyheg4sos9pk.us-east-1.rds.amazonaws.com:3306/prueba
